--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
           </div>
 
           <div class="col">
-            <h3>PLACE HOLDER</h3>
+            <h3>ABOUT FREELANCER</h3>
             <bold>Freelance is a free to use, open source Bootstrap theme created by <a href="#">Start Bootstrap</a></bold>
           </div>
 
