--- a/index.html
+++ b/index.html
@@ -38,8 +38,20 @@
 
             </div>
 
-            <span id="burger_menu"><a href="#">Menu</a> </span>
+            <div id="burger_menu">
+              <a href="#"><i class="fa-solid fa-bars"></i></a>
 
+              <div id="burger_menu_show">
+
+                <ul>
+                  <li><a href="#portfolio">PORTFOLIO</a></li>
+                  <li><a href="#about_me">ABOUT</a></li>
+                  <li><a href="#contact_me">CONTACT</a></li>
+                </ul>
+  
+              </div>
+            </div>
+            
           </div>
 
         </nav>
@@ -221,10 +233,10 @@
   
               <h3>AROUND THE WEB</h3>
   
-              <span><i class="fa-brands fa-facebook-f"></i></span>
-              <span><i class="fa-brands fa-google-plus-g"></i></span>
-              <span><i class="fa-brands fa-twitter"></i></span>
-              <span><i class="fa-brands fa-linkedin-in"></i></span>
+              <span><a href="#"><i class="fa-brands fa-facebook-f"></i></a></span>
+              <span><a href="#"><i class="fa-brands fa-google-plus-g"></i></a></span>
+              <span><a href="#"><i class="fa-brands fa-twitter"></i></a></span>
+              <span><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></span>
   
             </div>
   
